# sco-presentation-testing

./: .gitignore  Cargo.toml  LICENSE  README.md
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json
mutants.out.old/: lock.json  missed.txt  mutants.json  outcomes.json
mutants.out.old/diff/: src__add.rs_line_2_col_5.diff  src__add.rs_line_2_col_5_001.diff  src__add.rs_line_2_col_5_002.diff  src__add.rs_line_2_col_7.diff  src__add.rs_line_2_col_7_001.diff  src__main.rs_line_6_col_5.diff
mutants.out/diff/: src__add.rs_line_2_col_5.diff  src__add.rs_line_2_col_5_001.diff  src__add.rs_line_2_col_5_002.diff  src__add.rs_line_2_col_7.diff  src__add.rs_line_2_col_7_001.diff
proptest-regressions/: add.txt
src/: add.rs  main.rs  ui.rs
src/snapshots/: sco_presentation_testing__ui__test__spilt_words.snap
